# cedar-agent

./: .gitignore  API_DOCS.md  API_DOCUMENTATION.md  Cargo.toml  benchmark_setup.sh  my_entities.json  my_policies.json  run_bench.sh  run_sysbench.sh
benchmark/: cedar.lua
scripts/: parse_sysbench.py
src/: bench_dataset.rs  lib.rs  main.rs  write_origin.rs
src/routes/: authorization.rs  data.rs  invalidation.rs  mod.rs  policies.rs  schema.rs  stats.rs
src/schemas/: authorization.rs  mod.rs  stats.rs
src/services/: authorizer.rs  mod.rs
src/services/invalidation/: mod.rs
src/services/stats/: memory.rs  mod.rs
tests/routes/: mod.rs  stats_routes_tests.rs
tests/services/: authorizer_tests.rs  mod.rs
