[package]
name = "cedar-agent"
# This update dynamically via CI
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/permitio/cedar-agent"
description = "Cedar-Agent is an HTTP server designed to efficiently manage a policy store and a data store. It provides a seamless integration with Cedar, a language for defining permissions as policies."
repository = "https://github.com/permitio/cedar-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.7.0"
async-trait = "0.1.68"
cedar-policy = { git = "https://github.com/Dami-18/cedar.git", branch = "poltree" }
cedar-policy-core = { git = "https://github.com/Dami-18/cedar.git", branch = "poltree" }
clap = { version = "4.2.5", features = ["derive"] }
envy = "0.4.2"
log = "0.4.17"
log4rs = "1.2.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
schemars = "0.8.21"
serde = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "time"] }

# ── Dataset generator binary ───────────────────────────────────────────────────
 
[[bin]]
name = "generate_bench_data"
path = "src/bin/generate_bench_data.rs"
 
# ── Release profile ────────────────────────────────────────────────────────────
 
[profile.release]
opt-level = 3
lto       = "thin"